# SmartAIC

./: CMakeLists.txt  README.md  build.sh
CT/: ctdata.h
config/: dbconfig.c  dbconfig.h
smart_device/: main  main.c  smart_device.c
src/CT/: CMakeLists.txt  Snsrctlapp.c  ctdata.c
src/smart_controller/: CMakeLists.txt  controller.c  smart
src/smart_device/: CMakeLists.txt  main.c  smart_device.c  smart_device_header.h
